ajustes mobile link eric

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,6 +82,17 @@ body,
   width: 50%;
 }
 
+@media screen and (max-width: 768px) {
+  .form-wrapper {
+    width: 100%;
+    padding: 5% 0;
+  }
+
+  .footer__title {
+    font-size: 2.1em;
+  }
+}
+
 .is-primary {
   background-color: var(--brand-primary) !important;
 }
