--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,11 @@
 body,
-.hero-slant,
-.footer-content {
+.hero-slant
+/*,.footer-content */ {
   background-color: #fff;
+}
+
+.section {
+  padding-top: 30px;
 }
 
 .hide {
@@ -9,6 +13,8 @@ body,
 }
 
 .header {
+  padding: 0;
+  min-height: 60px;
   background-color: rgba(0,0,0, 0.5);
 }
 
@@ -65,10 +71,12 @@ body,
 }
 
 .index98 {
+  position: relative;
   z-index: 998;
 }
 
 .index99 {
+  position: relative;
   z-index: 999 !important;
 }
 
@@ -80,17 +88,6 @@ body,
 .form-wrapper {
   padding: 5% 2%;
   width: 50%;
-}
-
-@media screen and (max-width: 768px) {
-  .form-wrapper {
-    width: 100%;
-    padding: 5% 0;
-  }
-
-  .footer__title {
-    font-size: 2.1em;
-  }
 }
 
 .is-primary {
@@ -112,8 +109,31 @@ body,
 
 
 
-
-
 .header * {
   color: var(--brand-secondary) !important;
+}
+
+
+@media screen and (max-width: 768px) {
+  .home-hero-wrap{
+    height: auto;
+    padding-bottom:80px
+  }
+  
+  .hero-slant {
+    top: 570px;
+  }
+
+  .home-intro__lead {
+    font-size: 16px;
+  }
+
+  .form-wrapper {
+    width: 100%;
+    padding: 5% 0;
+  }
+
+  .footer__title {
+    font-size: 2.1em;
+  }
 }
