tirei a secao de habilidades

--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@
             --brand-secondary: #c0fc50;
             --brand-gray: #afafaf;
             --text-color: #333;
-            --brand-primary-hover: #c0fc50
+            --brand-primary-hover: #709b20
         }
         
         .Poppins-BoldItalic {
