--- a/css/custom.css
+++ b/css/custom.css
@@ -141,3 +141,17 @@ body,
     font-size: 2.1em;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .hero__headline {
+    font-size: 3em;
+  }
+
+  .home-intro__lead {
+    font-size: 14px;
+  }
+
+  .hero-slant {
+    top: 590px;
+  }
+}
