--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,10 @@ body,
   display: none;
 }
 
+.home-hero-wrap {
+  background-attachment: fixed;
+}
+
 .header {
   padding: 0;
   min-height: 60px;
@@ -115,6 +119,10 @@ body,
 
 
 @media screen and (max-width: 768px) {
+  .home-hero-wrap {
+    background-attachment: scroll;
+  }
+
   .home-hero-wrap{
     height: auto;
     padding-bottom:80px
