--- a/css/custom.css
+++ b/css/custom.css
@@ -26,6 +26,10 @@ body,
   font-weight: 100 !important;
 }
 
+.is-transparent {
+  background-color: transparent;
+}
+
 .text-light a {
   color: #fff !important;
 }
@@ -138,6 +142,14 @@ body,
 
   .home-intro__lead {
     font-size: 16px;
+  }
+
+  .footer-row {
+    flex-wrap: wrap !important;
+  }
+
+  .footer-row .column {
+    width: 100% !important;
   }
 
   .form-wrapper {
