--- a/css/custom.css
+++ b/css/custom.css
@@ -121,6 +121,16 @@ body,
   color: var(--brand-secondary) !important;
 }
 
+
+
+
+
+.footer__links {
+  display: flex; justify-content: center; flex-direction: row;  
+}
+
+
+
 .whatsapp-floating {
   z-index: 10000;
   position: fixed;
@@ -134,6 +144,23 @@ body,
 
 
 @media screen and (max-width: 768px) {
+  .header .email {
+    padding: 0;
+    margin-top: .6rem;
+  }
+
+  .footer__links {
+    display: flex; align-items: center; justify-content: center; flex-direction: column;  
+    margin-bottom: 30px;
+  }
+
+  .footer__links li {
+    font-size: 14px;
+    line-height: 25px;
+    padding-right: 0;
+  }
+
+
   .home-hero-wrap {
     background-attachment: scroll;
   }
@@ -186,3 +213,4 @@ body,
     top: 590px;
   }
 }
+
